[gd_scene load_steps=11 format=3 uid="uid://27awq5ull731"]

[ext_resource type="Script" uid="uid://b6lwpjipqps2u" path="res://scripts/unites/general/interface/interface_unite.gd" id="1_dk80o"]
[ext_resource type="Texture2D" uid="uid://ccfqynwh8c63w" path="res://assets/interface/unite/BarreVieZoneVieVide(512x512).png" id="2_76stb"]
[ext_resource type="Texture2D" uid="uid://r52h2fd2nn60" path="res://assets/interface/unite/BarreVieZoneViePleine(512x512).png" id="3_5kmur"]
[ext_resource type="Texture2D" uid="uid://ddayhll8pd60y" path="res://assets/interface/unite/BarreVieZoneVieAbsorption(512x512).png" id="4_diped"]
[ext_resource type="Texture2D" uid="uid://docixpvaub0a7" path="res://assets/interface/unite/UIuniteCapacites(512x512).png" id="4_kwkcr"]
[ext_resource type="Texture2D" uid="uid://b4cgkquia40u" path="res://assets/interface/unite/UIuniteInfosStats(512x512).png" id="5_6wd5v"]
[ext_resource type="FontFile" uid="uid://51527uw3luky" path="res://assets/interface/unite/polices/reppixel.ttf" id="6_c2bh5"]
[ext_resource type="Texture2D" uid="uid://c08rq4ph7vx68" path="res://assets/interface/unite/UIuniteConsommables(512x512).png" id="6_v7muh"]
[ext_resource type="Script" uid="uid://bchpfc7lkilwi" path="res://scripts/unites/general/interface/ConteneurPlacementPossibilite.gd" id="7_tbqdh"]

[sub_resource type="LabelSettings" id="LabelSettings_gopln"]
font = ExtResource("6_c2bh5")
font_size = 70
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="InterfaceUnite" type="Control"]
clip_children = 2
layout_mode = 3
anchor_right = 0.0277778
anchor_bottom = 0.0493827
offset_right = 480.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dk80o")

[node name="BarreVie" type="TextureProgressBar" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_right = 208.0
offset_bottom = 224.0
grow_horizontal = 2
value = 25.0
texture_under = ExtResource("2_76stb")
texture_progress = ExtResource("3_5kmur")

[node name="BarreVieTemporaire" type="TextureProgressBar" parent="BarreVie"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("4_diped")
texture_progress_offset = Vector2(1, 1)

[node name="AffichageVie" type="Label" parent="BarreVie/BarreVieTemporaire"]
visible = false
texture_filter = 1
layout_mode = 1
offset_right = 367.0
offset_bottom = 102.0
text = "05 | 05"
label_settings = SubResource("LabelSettings_gopln")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GestionnairePossibilite" type="Control" parent="."]
layout_mode = 1
anchor_left = -0.00195313
anchor_right = -0.00195313
offset_right = 512.0
offset_bottom = 512.0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="ConteneurMenus" type="FlowContainer" parent="GestionnairePossibilite"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -440.0
offset_bottom = -440.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("7_tbqdh")

[node name="Rangee1" type="VBoxContainer" parent="GestionnairePossibilite/ConteneurMenus"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MenuCapacitesActives" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee1"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_kwkcr")

[node name="MenuStats" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee1"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_6wd5v")

[node name="Rangee 2" type="VBoxContainer" parent="GestionnairePossibilite/ConteneurMenus"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="MenuConsommables" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee 2"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_v7muh")

[node name="MenuCapacitesActives" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee 2"]
visible = false
clip_children = 2
texture_filter = 1
clip_contents = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_kwkcr")

[connection signal="pressed" from="GestionnairePossibilite/ConteneurMenus/Rangee1/MenuStats" to="." method="_on_menu_stats_pressed"]
[connection signal="pressed" from="GestionnairePossibilite/ConteneurMenus/Rangee 2/MenuConsommables" to="." method="_on_menu_consommables_pressed"]
[connection signal="pressed" from="GestionnairePossibilite/ConteneurMenus/Rangee 2/MenuCapacitesActives" to="." method="_on_menu_capacites_actives_pressed"]
